# rocq-prover.org

./: .dockerignore  .gitignore  .gitmodules  2025-coqpl.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HACKING.md  LICENSE  LICENSE-3RD-PARTY  Makefile  README.md  compose.yml  dune  dune-project  init-cache  rocqproverorg.opam  tailwind.config.js
.devcontainer/: Dockerfile
.github/workflows/: GenerateLogos.yml  ci.yml  debug-ci.yml  generate-logos.yml  linkcheck.yml  scrape.yml
.nova/: Configuration.json
asset/: manifest.json  opensearch.xml
asset/css/: alectryon.css  pygments.css  stdlib.css
data/: README.md  gen_tools.html  gen_tools.yml  gen_tools_base.html  gen_tools_base.yml  gen_tools_dependency.html  gen_tools_dependency.yml  gen_tools_extended.html  gen_tools_extended.yml  gen_tools_full.html  gen_tools_full.yml  gen_tools_ide.html  gen_tools_ide.yml  gen_tools_optional.html  gen_tools_optional.yml  github-teams-simplified.json  github-teams.json  governance.yml  jobs.yml  mathcomp-fourcolor.md  opam-packaging.md  papers.yml  planet-sources.yml  roadmap.md  tools-header.yml  tools.yml  video-watch.yml  video-youtube.yml
data/academic_institutions/: aarhus.md  caltech.md  cambridge.md  cornell.md  eindhoven.md  ens_saclay.md  epfl.md  fau.md  iitm.md  itu.md  kansas.md  maryland.md  (+19 more)
playground/: dune-project
rocq-id/: README.md
scripts/: cat_tools.sh  generate_tools.py  scan-tailwind-colors.sh
src/rocqproverorg_web/lib/: config.ml  dune  handler.ml  middleware.ml  redirection.ml  rocqproverorg_web.ml  router.ml  sitemap.ml  static.ml
(+361 files in other folders)
