(library
 (name rocqproverorg_web)
 (libraries
  rocqproverorg.global
  rocqproverorg_package
  rocqproverorg_frontend
  dream
  dream-accept
  dream-encoding
  cmarkit
  rocqproverorg.data
  timedesc
  mirage-kv-mem))

(rule
 (deps (universe))
 (action
  (with-stdout-to
   commit.ml
   (progn
    (echo "let hash = \"")
    (pipe-stdout
     (run "git" "rev-parse" "HEAD")
     (run "tr" "-d" "\n"))
    (echo "\"\n")))))
